tests/integration/security/filebased_tls_origination/test_artifacts/security-filebased-tls-origination-/TestEgressGatewayTls/SIMPLE_TLS_origination_from_egress_gateway_to_https_endpoint/_test_context/DestinationRule.3263383999.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-filebased-simple
spec:
  host: "external-service.serverns-2-64913.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: SIMPLE
          caCertificates: /etc/certs/custom/root-cert.pem
          sni: external-service.serverns-2-64913.svc.cluster.local
